--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
 <div class="col-xs-12">
   <h1>Press Release</h1>
+
+  <div class="col-xs-12">
+    <ng-container *ngFor="let release of data.news">
+      <div class="col-xs-4 release">
+        <h3>{{release.title}}</h3>
+        <p>{{release.published}}</p>
+      </div>
+    </ng-container>
+  </div>
 </div>
