spacing and change date pipe option

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
   <div class="col-xs-12">
     <ng-container *ngFor="let release of data.news">
       <div class="col-xs-4 release">
-        <h3>{{release.title}}</h3>
-        <p>{{release.published | date:'short'}}</p>
+        <h3>{{ release.title }}</h3>
+        <p>{{ release.published | date }}</p>
       </div>
     </ng-container>
   </div>
