--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,11 @@
 
   <div class="col-xs-12">
     <ng-container *ngFor="let release of data.news">
-      <div class="col-xs-4 release">
-        <h3>{{ release.title }}</h3>
-        <p>{{ release.published | date }}</p>
+      <div class="col-xs-12 col-md-6 release">
+        <div class="container col-xs-12">
+          <h3>{{ release.title }}</h3>
+          <p>{{ release.published | date }}</p>
+        </div>
       </div>
     </ng-container>
   </div>
