--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <div class="col-xs-12 col-md-6 release">
         <div class="container col-xs-12">
           <h3>{{ release.title }}</h3>
-          <p>{{ release.published | date }}</p>
+          <p class="align-text-top">{{ release.published | date }}</p>
         </div>
       </div>
     </ng-container>
